<resources>
    <string name="app_name">Jadwal</string>
    <string name="title_atur_semester">Atur semester</string>
    <string name="title_atur_matakuliah">Atur matakuliah</string>
    <string name="title_atur_hari">Atur hari</string>
    <string name="title_arsip">Arsip semester</string>
    <string name="title_edit">Ubah</string>

    <string name="action_settings">Settings</string>

    <string name="nav_item_jadwal">Jadwal</string>
    <string name="nav_item_atur">Atur</string>
    <string name="nav_item_arsip">Arsip</string>
    <string name="nav_item_backup">Manajemen Data</string>
    <string name="nav_item_note">Catatan</string>

    <string name="hint_input_semester">Semester</string>
    <string name="hint_input_tahun_awal">Tahun awal</string>
    <string name="hint_input_tahun_akhir">Tahun akhir</string>
    <string name="hint_input_keterangan">Keterangan</string>
    <string name="hint_input_mata_kuliah">Pelajaran/Matakuliah</string>
    <string name="hint_input_tempat">Tempat</string>

    <string name="button_add">Tambah</string>
    <string name="button_edit">Ubah</string>
    <string name="button_close">Batal</string>
    <string name="button_delete">Hapus</string>
    <string name="button_arsip">Arsip</string>
    <string name="button_aktif">Set aktif</string>
    <string name="button_cancel_arsip">Batal arsip</string>
    <string name="button_backup_db">Backup database</string>
    <string name="button_Restore_db">Restore database</string>

    <string name="button_edit_semester">Ubah semester</string>
    <string name="button_delete_semester">Hapus semester</string>
    <string name="button_arsip_semester">Arsip semester</string>

    <string name="dialog_add_semester">Tambah semester</string>
    <string name="dialog_edit_semester">Ubah semester</string>
    <string name="dialog_add_matakuliah">Tambah matakuliah</string>
    <string name="dialog_edit_matakuliah">Ubah matakuliah</string>
    <string name="dialog_add_matakuliah_hari">Tambah hari</string>
    <string name="dialog_edit_matakuliah_hari">Ubah hari</string>

    <string-array name="arrays_atur_item">
        <item>@string/button_edit</item>
        <item>@string/button_delete</item>
        <item>@string/button_arsip</item>
    </string-array>
    <string-array name="arrays_atur_item_semester">
        <item>@string/button_edit</item>
        <item>@string/button_delete</item>
        <item>@string/button_arsip</item>
        <item>@string/button_aktif</item>
    </string-array>
    <string-array name="arrays_arsip_item">
        <item>@string/button_edit</item>
        <item>@string/button_delete</item>
        <item>@string/button_cancel_arsip</item>
    </string-array>

    <string-array name="arrays_atur_item_matakuliah">
        <item>@string/button_edit</item>
        <item>@string/button_delete</item>
    </string-array>

    <string name="ask_set_aktif">Jadikan jadwal semester aktif?</string>
    <string name="prompt_press_back_to_exit">Tekan tombol back sekali lagi untuk keluar</string>

    <string name="success_add">Berhasil ditambah</string>
    <string name="success_delete">Berhasil dihapus</string>
    <string name="success_edit">Berhasil diubah</string>
    <string name="success_arsip">Berhasil membuat arsip</string>
    <string name="success_aktif">Berhasil membuat aktif</string>

    <string name="failed_delete">Gagal menghapus</string>
    <string name="failed_arsip">Gagal membuat arsip</string>
    <string name="failed_aktif">Gagal membuat aktif</string>

    <string name="error_zero_input">Tidak boleh kosong</string>

    <string name="spinner_prompt_hari">Pilih hari</string>
    <string name="spinner_prompt_jam_awal">Dari jam</string>
    <string name="spinner_prompt_jam_akhir">Sampai jam</string>

    <string name="spinner_hari_senin">Senin</string>
    <string name="spinner_hari_selasa">Selasa</string>
    <string name="spinner_hari_rabu">Rabu</string>
    <string name="spinner_hari_kamis">Kamis</string>
    <string name="spinner_hari_jumat">Jumat</string>
    <string name="spinner_hari_sabtu">Sabtu</string>
    <string name="spinner_hari_minggu">Minggu</string>

    <string-array name="spinner_hari_entry">
        <item>@string/spinner_hari_senin</item>
        <item>@string/spinner_hari_selasa</item>
        <item>@string/spinner_hari_rabu</item>
        <item>@string/spinner_hari_kamis</item>
        <item>@string/spinner_hari_jumat</item>
        <item>@string/spinner_hari_sabtu</item>
        <item>@string/spinner_hari_minggu</item>
    </string-array>

</resources>

