<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_layout_semester">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:hint="@string/hint_input_semester"
            android:id="@+id/text_input_edit_semester"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_tahun"
        android:layout_below="@id/text_input_layout_semester">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:id="@+id/text_input_layout_tahun_awal">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="4"
                android:hint="@string/hint_input_tahun_awal"
                android:id="@+id/text_input_edit_tahun_awal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:id="@+id/text_input_layout_tahun_akhir">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="4"
                android:hint="@string/hint_input_tahun_akhir"
                android:id="@+id/text_input_edit_tahun_akhir"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/layout_tahun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_layout_keterangan">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:hint="@string/hint_input_keterangan"
            android:id="@+id/text_input_edit_keterangan"/>
    </android.support.design.widget.TextInputLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout_keterangan"
        android:id="@+id/checkbox_aktif"
        android:text="@string/ask_set_aktif"/>
</RelativeLayout>